# problem_juggler

./: Cargo.toml
.github/workflows/: release.yml  rust.yml
contracts/: Cargo.toml
contracts/src/: lib.rs
pretender/: Cargo.toml
pretender/src/: client.rs  main.rs  problem_client.rs  solver_client.rs  stress_runner.rs  user_client.rs
problem_service/: Cargo.toml
problem_service/src/: lib.rs  main.rs  problem_handler.rs  problem_service.rs  test_template.rs
problem_service/src/interface/: mod.rs  solver.rs
problem_service/src/problems/: count_islands.rs  largest_window.rs  mod.rs  problem_kind.rs  size_of_island.rs
problem_service/src/test/: mod.rs
problem_service/tests/: common.rs  problem_service_test.rs
solver_service/: Cargo.toml
solver_service/src/: main.rs  solver_service.rs
solver_service/src/solvers/: count_islands.rs  largest_window_in_array.rs  mod.rs  size_of_island.rs  test_problem.rs
user_service/src/: lib.rs  main.rs  user_repo.rs  user_service.rs
user_service/src/tokens/: mod.rs  token_factory.rs
