[package]
name = "problem_service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
rand = "0.9.2"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["sqlite", "macros"]}
tokio = {version = "1.49.0", features = ["full"] }
contracts = { path = "../contracts" }
